--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,7 @@
   --background: #ffffff;
   --foreground: #171717;
   --tertiary: #ffc300;
+  --black: #0a0a0a;
 }
 
 @media (prefers-color-scheme: dark) {
