--- a/app/components/Header/Header.module.css
+++ b/app/components/Header/Header.module.css
@@ -2,13 +2,16 @@
     position: sticky;
   top: 0;
   z-index: 1000;
-  height: 100px;
+  height: 50px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   background-color: var(--black);
-  padding: 1rem;
+  padding: 0 ;
 }
 .nav{
 display: flex;
+align-items: center;
 height: 100%;
 width: 100%;
+padding: 1rem 0;
 }
+
