--- a/app/pages/main/Hero.css
+++ b/app/pages/main/Hero.css
@@ -1,5 +1,6 @@
 .hero{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
@@ -13,8 +14,7 @@
 }
 .hero_tags-container{
     display: flex;
-    width: 40%;
-    justify-content: space-between;
+    gap: .2rem;
     color: var(--tertiary);
     font-size: .8rem;
 }
