--- a/app/pages/main/Hero.css
+++ b/app/pages/main/Hero.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 90vh;
+    height: 100vh;
 }
 .hero_div.left{
     display: flex;
@@ -17,6 +17,7 @@
     gap: .2rem;
     color: var(--tertiary);
     font-size: .8rem;
+    max-width: max-content;
 }
 /* .hero_tags-container:nth-child(2){
     border-left: 1px solid var(--tertiary);
@@ -25,6 +26,7 @@
 .hero_h1{
     font-size: 4rem;
     line-height: 4.2rem;
+
 }
 .hero_div.image_parent{
     height: 100%;
@@ -35,4 +37,9 @@
     width: 100%;
     object-position: center;
     object-fit: cover;
+}
+@media (min-width: 480px) {
+    .hero {
+        flex-direction: row;
+    }
 }
