--- a/app/components/Showcase/Showcase.module.css
+++ b/app/components/Showcase/Showcase.module.css
@@ -1,11 +1,55 @@
 .container{
     display: flex;
     flex-direction: column;
+    align-items: center;
     width: 100%;
+    max-width: 1250px;
+    margin: 0 auto;
     max-height: 100vh;
+    background-color: var(--background);
+    gap: 3rem;
 }
 .left_container{
     display: flex;
     flex: 3;
     flex-direction: column;
+    color: var(--foreground);
+}
+.title{
+    font-weight: 600;
+    font-size: 3rem;
+}
+.subtitle{
+    font-size: 1.5rem;
+    
+}
+.tags{
+    color: var(--tertiary);
+    font-family: var(--font-libre-franklin);
+    margin: 1rem 0;
+}
+.description{
+    font-family: var(--font-libre-franklin);
+    margin: 1rem auto;
+}
+.img_container{
+    box-sizing: border-box;
+    display: flex;
+    min-height: 300px;
+    min-width: 300px;
+    width: 50%;
+    aspect-ratio: 1 / 1;
+}
+.image{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+
+@media (min-width: 780px) {
+    .container{
+        flex-direction: row;
+    }
 }
