--- a/app/components/Showcase/Showcase.module.css
+++ b/app/components/Showcase/Showcase.module.css
@@ -25,8 +25,10 @@
 }
 .tags{
     color: var(--tertiary);
+    display: flex;
     font-family: var(--font-libre-franklin);
     margin: 1rem 0;
+    gap: .4rem;
 }
 .description{
     font-family: var(--font-libre-franklin);
