--- a/app/components/Corners/Corners.module.css
+++ b/app/components/Corners/Corners.module.css
@@ -1,4 +1,16 @@
-.wrapper{
-    box-sizing: border-box;
-    padding: 2rem;
+.corner{
+    position: absolute;
+    top: 0;
+    left: 0;
+    border: 2px solid var(--tertiary);
+    width: 5rem;
+    aspect-ratio: 1/1;
+    border-width:  1rem 0 0 1rem;
+}
+.corner.bottom{
+    top: auto;
+    left: auto;
+    bottom: 0;
+    right: 0;
+    border-width:   0 1rem 1rem 0;
 }
